AMQP-83 Code Review
* Remove Bundlor Plugin
* Update README.md
* verify created *pom.xml* files after *gradle install* execution that dependencies match
* ensure that *dist* task is executed by default